# poker

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE.txt  README.md  build.rs  table.in
.cargo/: config.toml
benches/: evaluation.rs  evaluator.rs
cache-table/: Cargo.toml
cache-table/src/: main.rs
example-helpers/: Cargo.toml
example-helpers/src/: lib.rs
examples/: jacks-or-better.rs  poker-repl.rs
examples/common/: mod.rs
src/: constants.rs  deck.rs  error.rs  ext.rs  lib.rs
src/card/: macros.rs  mod.rs  rank.rs  suit.rs
src/evaluate/: cached.rs  class.rs  eval.rs  evaluation.rs  hand_rank.rs  lookup_table.rs  macros.rs  meta.rs  mod.rs  static_lookup.rs  utils.rs
