[package]
name = "poker"
version = "0.5.0"
rust-version = "1.63.0"
authors = ["Daniel Mack"]
edition = "2021"
repository = "https://github.com/deus-x-mackina/poker"
license = "MIT"
documentation = "https://docs.rs/poker"
description = "A crate for speedy poker hand evaluation"
keywords = ["poker", "card", "game", "evaluate", "holdem"]
categories = ["algorithms", "data-structures", "games", "game-development"]
readme = "README.md"

[lib]
bench = false

[dependencies]
# Some iterative algorithms
itertools = "0.10"
# Iterate through enum variants
variter = { version = "0.3", default-features = false }
# Faster hashmaps
rustc-hash = "1"
# Shuffle cards
rand = { version = "0.8", optional = true }
# Misc
cfg-if = "1"
# Table caching
phf = { version = "0.10", optional = true }

[features]
default = ["rand"]
static_lookup = ["phf"]

[profile.release]
lto = true
codegen-units = 1

[profile.bench]
lto = true
codegen-units = 1

[dev-dependencies]
# Test - Share a LookupTable for testing - doesn't matter if destructors won't run
lazy_static = "1.4"
# Test - run code examples in *.md files
doc-comment = "0.3"
# Examples
rustyline = "11"
colored = "2"
rustyline-derive = "0.8"
# Benching
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "evaluation"
harness = false
required-features = ["static_lookup"]

[package.metadata.docs.rs]
all-features = true
